welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:27: error: type mismatch;
 found   : Unit
 required: Boolean
  }
  ^